--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.172.0",
+    "three-mesh-bvh": "0.8.0",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
